* (bug 23206) Add Special::Search hook for detecting successful "Go"
* When visiting a "red link" of a deleted file, a deletion and move log excerpt
  is provided on the Upload form.
* (bug 22647) Add category details in search results.
* (bug 23276) Add hook to Special:NewPages to modify query
* Add accesskey 's' and tooltip to 'Save' button at Special:Preferences
* (bug 20186) Allow filtering Special:Contributions for RevisionDeleted edits
* (bug 22858) $wgLocalStylePath is by default set to the same value as
  $wgStylePath but should never point to a different domain than the site is
  on, allowing skins to use .htc files which are not cross-domain friendly.
* ajaxwatch now uses the API and JQuery, and can be used to animate arbitrary 
  watch links, not just to watch the page the link is on.
* (bug 20193) Added $wgVectorShowVariantName global configuration variable
  which causes Vector to render the the variants drop-down menu with a label
  showing the current variant name. This is off by default, pending further
  research into its user experience implications.

=== Bug fixes in 1.17 ===
* (bug 17560) Half-broken deletion moved image files to deletion archive
  without updating database
* (bug 22666) Submitting user block form with an invalid user name no longer
  throws an error
* (bugs 22665 and 22667) User '0' can now be unblocked and have its block
  settings changed
* (bug 22606) The body of e-mail address confirmation message is now different
  when the address changed
* (bug 22664) Special:Userrights now accepts '0' as a valid user name
* (bug 5210) preload parser now parses <noinclude>, <includeonly> and redirects
* (bug 22709) IIS7 mishandles redirects generated by OutputPage::output() when
  the URL contains a colon.
* (bug 22353) Categorised recent changes now works again
* (bug 22747) "Reveal my e-mail address in notification e-mails" preference is
  now only displayed when relevant