@@ -70,6 +70,7 @@ $wgIgnoredMessages = array(
 	'accesskey-watch',
 	'accesskey-upload',
 	'accesskey-preferences-save',
+	'accesskey-summary',
 	'addsection',
 	'talkpageheader',
 	'anonnotice',
